# CurliPie

./: .gitignore  README.md  README.rst  encre.toml  now.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js  vercel.json  vue.config.js
.github/workflows/: test.yml
api/: main.py
api/_public/: encre.css  ky.map  main.js  tailwind.css  uno.css
api/_public/highlight/: highlight.min.js
api/public/: index.html  ky.min.js  tailwind.css
api/src/: main.js
api/src/components/: HelloWorld.vue
api/src/views/: Home.vue
api/templates/: index.jinja
curlipie/: __init__.py  compat.py  curly.py  pie.py  structures.py  ver.py
frontend-dev/: package.json  tailwind.config.js
public/: index.html
src/components/: HelloWorld.vue
src/router/: index.js
src/views/: Home.vue
tests/: test_curlipie.py  test_parse_curl.py
tools/: generate-css.sh
