[tool.poetry]
name = "curlipie"
version = "0.8.3"
description = "Library to convert cURL command line to HTTPie"
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
maintainers = [
    "Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"
]
license = "MPL-2.0"
readme = "README.rst"
repository = "https://github.com/hongquan/CurliPie.git"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Environment :: Web Environment",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["api", "http", "curl", "httpie", "cli", "conversion"]

[tool.poetry.dependencies]
python = "^3.9"
multidict = "^6.0.5"
yarl = "^1.9.4"
orjson = "^3.9.15"
first = "^2.0.2"
python-rapidjson = "^1.15"
http-constants = "^0.5.0"
logbook = "^1.7.0.post0"
single-version = "^1.6.0"
kiss-headers = "^2.4.3"
pydantic = "^2.6.3"
Jinja2 = "^3.1.3"
typed-argument-parser = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
devtools = "^0.12.2"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
aiofiles = "^23.2.1"
ruff = "^0.2.2"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "curlipie"]

[tool.ruff]
line-length = 120
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = []
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py39"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
